# gysela_magnet_conf

./: .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup_env.sh
examples/: chease.ipynb  geqdsk.ipynb  gvec.ipynb
gysmc/: GYSmagnet_config.py  __init__.py  chease_magnetconfig.py  circular_magnetconfig.py  culham_magnetconfig.py  geqdsk_magnetconfig.py  gsespline_magnetconfig.py  gvec_magnetconfig.py  magnet_config.py  pressure_profile.py  q_profile.py  read_ogyropsi.py
