[project]
name = "gysmc"
description = "Reading and generating magnetic configurations for GYSELA and Gysela-X++"
readme = "README.md"
authors = [
    {name = "Zhisong Qu"},
    {name = "Philipp Krah"},
]
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = ["plasma", "gyrokinetics", "GYSELA"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.22",
    "scipy >= 1.3"
]

[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >= 8",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "gysmc/_version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"